<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.pluralsight.candycoded.InfoActivity">

    <ImageView
        android:id="@+id/image_view_candy_store"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="0dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/candy_store"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/placeholder_landscape" />

    <TextView
        android:id="@+id/text_view_address"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        android:gravity="center_vertical"
        android:text="@string/_618_e_south_st_orlando_fl"
        android:textColor="?android:attr/actionMenuTextColor"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/image_view_map"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view_candy_store" />

    <TextView
        android:id="@+id/text_view_phone"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        android:gravity="center_vertical"
        android:text="@string/_012_345_6789"
        android:textColor="?android:attr/actionMenuTextColor"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/text_view_address"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view_map" />

    <TextView
        android:id="@+id/text_view_hours"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:gravity="center_vertical"
        android:text="@string/everyday_10am_10pm"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/text_view_phone"
        app:layout_constraintTop_toTopOf="@+id/image_view_hours" />

    <ImageView
        android:id="@+id/image_view_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/view_phone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view_map"
        app:srcCompat="@android:drawable/stat_sys_phone_call" />

    <ImageView
        android:id="@+id/image_view_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/view_hours"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view_phone"
        app:srcCompat="@android:drawable/ic_menu_recent_history" />

    <ImageView
        android:id="@+id/image_view_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/map_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view_candy_store"
        app:srcCompat="@android:drawable/ic_dialog_map" />

    <EditText
        android:id="@+id/url"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:autofillHints="@string/enter_url"
        android:inputType="textUri"
        android:minHeight="48dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/text_view_hours"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/text_view_hours"
        app:layout_constraintTop_toBottomOf="@+id/text_view_hours">

    </EditText>

</androidx.constraintlayout.widget.ConstraintLayout>
